# jrvltsql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  install.bat  install.ps1  mkdocs.yml  pyproject.toml  quickstart.bat
.github/workflows/: docs.yml  test.yml
config/: config.yaml.example  logging.yaml
docs/: API.md  ARCHITECTURE_DESIGN.md  CLI.md  CONFIGURATION.md  DUPLICATE_HANDLING.md  JVDATA_PARSER_NOTES.md  LLM_INTEGRATION_SUMMARY.md  TECHNICAL.md  UI_UX_DESIGN.md  index.md  llm_integration_design.md  llm_integration_interfaces.py  qiita_64bit_python_com.md  qiita_nvlink_article.md  qiita_umacon_tips.md
docs/api/: database.md  parser.md  schema.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/gists/: check_dll_surrogate.py  nvlink_subprocess_fetch.py  remove_dll_surrogate.py  test_64bit_com.py
docs/reference/: changelog.md  error-codes.md  nar-realtime-data.md  schema-details.md  tables.md
docs/troubleshooting/: nvlink-203-error.md
docs/user-guide/: cli.md  data-import.md  database-selection.md  realtime.md
reference_data/: README.md
scripts/: README.md  README_check_data_quality.md  background_updater.py  check_data_quality.py  dump_raw_records.py  extract_fixtures_from_db.py  fill_empty_postgresql_tables.py  migrate_real_to_numeric.py  quickstart.py  remove_dll_surrogate.py  validate_schema_parser.py
specs/001-local-racing-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/cli/: fetch_today.py  main.py  poll_odds.py
src/database/: base.py  indexes.py  migration.py  postgresql_handler.py  schema.py  schema_jravan.py  schema_metadata.py  schema_nar.py  schema_types.py  sqlite_handler.py  table_mappings.py
src/fetcher/: base.py  historical.py  realtime.py
src/importer/: batch.py  importer.py  importer_optimized.py
src/jvlink/: bridge.py  constants.py  wrapper.py
src/nvlink/: __init__.py  bridge.py  constants.py  worker_32bit.py  wrapper.py  wrapper_32bit.py
src/parser/: av_parser.py  base.py  bn_parser.py  br_parser.py  bt_parser.py  cc_parser.py  ch_parser.py  ck_parser.py  converters.py  cs_parser.py  dm_parser.py  factory.py  h1_parser.py  h6_parser.py  ha_parser.py  hc_parser.py  hn_parser.py  hr_parser.py  hs_parser.py  hy_parser.py  jc_parser.py  jg_parser.py  ks_parser.py  nc_parser.py  nu_parser.py  o1_parser.py  o2_parser.py  o3_parser.py  o4_parser.py  o5_parser.py  o6_parser.py  oa_parser.py  ra_parser.py  rc_parser.py  (+13 more)
tests/: INTEGRATION_TESTS.md  README.md  TEST_STRATEGY.md  conftest.py  setup_pg_test_db.py  test_all_databases.py  test_all_schemas.py  test_cli.py  test_comprehensive_integration.py  test_converters.py  test_coverage_expansion.py  test_data_availability.py  test_database.py  test_e2e_comprehensive.py  test_error_scenarios.py  test_ha_parser.py  test_historical_502.py  test_importer.py  test_importer_clean_record.py  test_indexes.py  test_installer.py  test_integration.py  test_jra_fixtures.py  test_jvlink_wrapper.py  test_log_rotation.py  test_metadata_application.py  test_migration.py  test_nar_502_recovery.py  test_nar_502_timeout.py  test_nar_load_stress.py  test_nar_race_fallback.py  test_nu_parser.py  test_oa_parser.py  test_parser.py  test_parser_compatibility.py  test_parsers.py  test_performance_benchmarks.py  test_postgresql.py  test_quickstart_cli.py  test_ra_parser_jravan.py  (+3 more)
tools/: JV-Link_DllSurrogate.reg  enable_64bit_python.bat
(+33 files in other folders)
